cursor/bigdata_learn/kubernetes/data/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: myapp
  labels:
    app: db
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mysql
