cursor/bigdata_learn/kubernetes/data/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: myapp
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
